# basil

./: .gitignore  README.md  pyproject.toml
basil/: __init__.py  __main__.py  codec.py  config.py  io.py  preprocess.py  trainer.py  utils.py
basil/commands/: __init__.py  decode.py  encode.py  optimize.py  train.py
basil/training/: dataset.py  model.py  trainer.py
configs/: config.full.yaml  config.minimal.yaml  optimize.full.yaml  optimize.minimal.yaml
scripts/: run_train.sh  train.py  train.yaml
