[project]
name = "basil"
version = "1.0.0"
description = "Balanced Assignment Semantic ID Library - A production-focused library for vector quantization"
authors = [
    {name = "Nidhish Shah",email = "nidhish.shah@prosus.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
