[project]
name = "basil"
version = "1.0.0"
description = "Balanced Assignment Semantic ID Library - Production RQ-VAE."
authors = [{name = "Nidhish Shah"}]

readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "numpy (>=1.24.0)",
    "onnxruntime (>=1.20.0)",
    "pydantic (>=2.0.0,<3.0.0)",
    "pyyaml (>=6.0.0,<7.0.0)",
]

[project.scripts]
basil = "basil.__main__:main"

[dependency-groups]
dev = [
    "black (>=25.11.0,<26.0.0)",
    "isort (>=7.0.0,<8.0.0)"
]
train = [
    "torch (>=2.5.0,<2.9.0)",
    "wandb (>=0.23.0,<0.24.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "onnx (>=1.19.0,<2.0.0)",
    "safetensors (>=0.7.0,<0.8.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
